# TensorRT-LLM

./: DISAGG.md  EXPLANATION.md
security_scanning/: pyproject.toml
security_scanning/docs/: pyproject.toml
security_scanning/examples/draft_target_model/: pyproject.toml
security_scanning/examples/eagle/: pyproject.toml
security_scanning/examples/lookahead/: pyproject.toml
security_scanning/examples/medusa/: pyproject.toml
security_scanning/examples/models/contrib/baichuan/: pyproject.toml
security_scanning/examples/models/contrib/chatglm3-6b-32k/: pyproject.toml
security_scanning/examples/models/contrib/dbrx/: pyproject.toml
security_scanning/examples/models/contrib/falcon/: pyproject.toml
security_scanning/examples/models/contrib/gptneox/: pyproject.toml
security_scanning/examples/models/contrib/grok/: pyproject.toml
security_scanning/examples/models/contrib/hyperclovax/: pyproject.toml
security_scanning/examples/models/contrib/internlm/: pyproject.toml
security_scanning/examples/models/contrib/jais/: pyproject.toml
security_scanning/examples/models/contrib/stdit/: pyproject.toml
security_scanning/examples/models/core/commandr/: pyproject.toml
security_scanning/examples/models/core/gemma/: pyproject.toml
security_scanning/examples/models/core/llama/: pyproject.toml
security_scanning/examples/models/core/mamba/: pyproject.toml
security_scanning/examples/models/core/mixtral/: pyproject.toml
security_scanning/examples/models/core/phi/: pyproject.toml
security_scanning/examples/models/core/qwen/: pyproject.toml
security_scanning/examples/models/core/qwen2audio/: pyproject.toml
security_scanning/examples/models/core/qwenvl/: pyproject.toml
security_scanning/examples/models/core/recurrentgemma/: pyproject.toml
security_scanning/examples/models/core/whisper/: pyproject.toml
security_scanning/examples/ngram/: pyproject.toml
security_scanning/examples/quantization/: pyproject.toml
security_scanning/examples/redrafter/: pyproject.toml
security_scanning/tests/integration/defs/perf/: pyproject.toml
security_scanning/triton_backend/: pyproject.toml
(+525 files in other folders)
