[tool.poetry]
name = "tensorrt-llm"
version = "0.1.0"
description = ""
authors = ["TensorRT LLM [svc_tensorrt_llm@nvidia.com]"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
accelerate = ">=0.25.0"
build = "^1.3.0"
colored = "^2.3.1"
diffusers = ">=0.27.0"
lark = "^1.2.2"
mpi4py = "^4.1.0"
numpy = "<2"
onnx = ">=1.12.0"
onnx-graphsurgeon = ">=0.5.2"
openai = "^1.99.5"
polygraphy = "^0.49.26"
psutil = "^7.0.0"
nvidia-ml-py = ">=12,<13"
pynvml = "12.0.0"
pulp = "^3.2.2"
pandas = "^2.3.1"
h5py = "3.12.1"
strenum = "^0.4.15"
sentencepiece = ">=0.1.99"
tensorrt = ">=10.11.0,<10.12.0"
torch = ">=2.7.1,<=2.8.0a0"
nvidia-modelopt = {version = ">=0.33.0,<0.34.0", extras = ["torch"]}
transformers = "4.55.0"
pydantic = ">=2.9.1"
pydantic-settings = {extras = ["yaml"], version = "^2.10.1"}
omegaconf = "^2.3.0"
pillow = "10.3.0"
wheel = "<=0.45.1"
optimum = "^1.27.0"
datasets = "3.1.0"
evaluate = "^0.4.5"
mpmath = ">=1.3.0"
click = "^8.2.1"
click-option-group = "^0.5.7"
aenum = "^3.1.16"
pyzmq = "^27.0.1"
fastapi = "0.115.4"
uvicorn = "^0.35.0"
setuptools = "<80"
ordered-set = "^4.1.0"
peft = "^0.17.0"
einops = "^0.8.1"
flashinfer-python = "0.2.5"
xgrammar = "0.1.21"
backoff = "^2.2.1"
nvtx = "^0.2.13"
meson = "^1.8.3"
ninja = "^1.11.1.4"
etcd3 = "^0.12.0"
blake3 = "^1.0.5"
llguidance = "0.7.29"
soundfile = "^0.13.1"
triton = "3.3.1"
blobfile = "^3.0.0"
tiktoken = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
