[tool.poetry]
name = "triton-backend"
version = "0.1.0"
description = ""
authors = ["TensorRT LLM [svc_tensorrt_llm@nvidia.com]"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
regex = "^2025.7.34"
fire = "^0.7.0"
tritonclient = {extras = ["all"], version = "^2.59.0"}
transformers = "4.51.0"
pandas = "^2.3.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
